<?xml version="1.0"?>
<package format="2">
  <name>search_planners</name>
  <version>0.0.1</version>
  <description>Search based planners</description>
  <maintainer email="naveedhd@gmail.com">Naveed Usmani</maintainer>
  <license>TODO</license>
  <url type="website">https://github.com/naveedhd/search_planners</url>
  <url type="bugtracker">https://github.com/naveedhd/search_planners/issues</url>
  <author email="naveedhd@gmail.com">Naveed Usmani</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>catch_ros</depend>
  <depend>costmap_2d</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <depend>nav_core</depend>
  <depend>roscpp</depend>

  <export>
    <nav_core plugin="${prefix}/plugin.xml" />
  </export>

</package>